[metadata]
name = cvss-util
author = Atlassian Security Team
summary = This package contains cvss v2 and v3 calculation utilities.
license = BSD
home-page = https://github.com/asecurityteam/cvss_util
classifier =
          Development Status :: 4 - Beta
          Environment :: Console
          Intended Audience :: Developers
          Operating System :: OS Independent
          Programming Language :: Python
          Programming Language :: Python :: 3
          Programming Language :: Python :: 3.8
          Programming Language :: Python :: 3.9
          Programming Language :: Python :: 3.10
          Programming Language :: Python :: 3.11
          Programming Language :: Python :: 3.12
          License :: OSI Approved :: BSD License

[files]
packages =
    cvss_util

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -s -v -x

[aliases]
test=pytest
